--- a/ComJanWpf/ComJanWpf/packages.config
+++ b/ComJanWpf/ComJanWpf/packages.config
@@ -3,5 +3,6 @@
   <package id="AForge" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net461" />
   <package id="OpenCvSharp-AnyCPU" version="2.4.10.20161105" targetFramework="net45" />
 </packages>
